[package]
name = "io"
version = "0.0.0"
edition = "2024"
links = "io"


[build-dependencies]
color-eyre.workspace = true
xbuild.workspace = true

[dependencies]
sec.workspace = true
sys.workspace = true

[features]

# --------------------------------------------------------------------------
# MCU features
# --------------------------------------------------------------------------

mcu_stm32f427 = ["sec/mcu_stm32f427", "mcu_stm32f4"]
mcu_stm32f429 = ["sec/mcu_stm32f429", "mcu_stm32f4"]
mcu_stm32u58 = ["sec/mcu_stm32u58", "mcu_stm32u5"]
mcu_stm32u5g = ["sec/mcu_stm32u5g", "mcu_stm32u5"]

# --------------------------------------------------------------------------
# Privilege mode features
# --------------------------------------------------------------------------

kernel_mode = ["sec/kernel_mode"]
secure_mode = ["sec/secure_mode"]

# --------------------------------------------------------------------------
# Selectable components
# --------------------------------------------------------------------------

app_loading = ["sys/app_loading"]
backlight = []
ble = ["nrf"]
button = []
display = []
dma2d = []
emulator = ["sec/emulator"]
fancy_fatal_error = []
haptic = ["sys/i2c_bus"]
ipc = ["sys/ipc"]
nfc = []
nrf = []
nrf_auth = ["sec/nrf_auth"]
hw_jpeg_decoder = []
lockable_bootloader = ["sec/lockable_bootloader"]
pmic = ["sys/i2c_bus"]
power_manager = ["pmic", "sys/i2c_bus"]
production = ["sec/production"]
raspi_emulator = []
rgb_led = []
sbu = []
sd_card = []
smp = []
suspend = ["sec/suspend"]
touch = ["sys/i2c_bus"]
usb_iface_debug = ["usb"]
usb_iface_vcp = ["usb"]
usb_iface_webauthn = ["usb"]
usb_iface_wire = ["usb"]

# --------------------------------------------------------------------------
# Automatically derived features (do not enable from outside)
# --------------------------------------------------------------------------

mcu_stm32u5 = ["mcu_stm32"]
mcu_stm32f4 = ["mcu_stm32"]
mcu_stm32 = []
usb = []

# Features for selecting driver implementations

backlight_tps61043 = []
backlight_tps61062 = []
backlight_pin = []

touch_ft6x36_t2t1 = []
touch_ft6x36_t3t1 = []
touch_ft3168 = []
touch_stmpe811 = []
touch_sitronix = []

framebuffer = []

display_unix = []
display_ltdc_dsi = []
display_st7789 = []
display_vg2864 = []
display_stm32f429i_disc1 = []

display_panel_lx250a2401a = []
display_panel_stm32u5a9j_dk = []
display_panel_t2t1 = []
display_panel_lx154a2482 = []
display_panel_vg2864 = []

touch_unix = []




