[package]
name = "models"
version = "0.0.0"
edition = "2024"
links = "models"

[build-dependencies]
cbuild = { path = "../cbuild" }

[dependencies]

[features]

# --------------------------------------------------------------------------
# Model features
# --------------------------------------------------------------------------

model_d001 = []
model_d002 = []
model_t2t1 = []
model_t2b1 = []
model_t3b1 = []
model_t3t1 = []
model_t3w1 = []

# --------------------------------------------------------------------------
# MCU features
# --------------------------------------------------------------------------

mcu_stm32f4 = ["mcu_stm32"]
mcu_stm32u58 = ["mcu_stm32u5"]
mcu_stm32u5g = ["mcu_stm32u5"]
mcu_emulator = []

# --------------------------------------------------------------------------
# Privilege mode features
# --------------------------------------------------------------------------

kernel_mode = []
secure_mode = []
secmon-layout = []

# --------------------------------------------------------------------------
# Executable type featurs (for legacy C definitions)
# --------------------------------------------------------------------------

boardloader = []
bootloader = []
secmon = []
kernel = []
prodtest = []

lockable_bootloader = []

# --------------------------------------------------------------------------
# Automatically derived features (do not enable from outside)
# --------------------------------------------------------------------------

mcu_stm32u5 = ["mcu_stm32"]
mcu_stm32 = []



