[package]
name = "rtl"
version = "0.0.0"
edition = "2024"
links = "rtl"

[build-dependencies]
color-eyre.workspace = true
xbuild.workspace = true

[dependencies]
models.workspace = true

[features]

# --------------------------------------------------------------------------
# Selectable features
# --------------------------------------------------------------------------

emulator = ["models/emulator"]
production = ["models/production"]
sprintf = []
universal_fw = []

test = [
    "models/model_t3w1",
    "emulator",
]



