[package]
name = "rtl"
version = "0.0.0"
edition = "2024"
links = "rtl"

[build-dependencies]
color-eyre.workspace = true
xbuild.workspace = true

[dependencies]
models.workspace = true

[features]

# --------------------------------------------------------------------------
# Selectable components
# --------------------------------------------------------------------------

aes_gcm = []
ed25519_no_precomp = []
emulator = ["insecure_prng", "models/emulator"]
eos = []
insecure_prng = []
mldsa = []
nem = []
noise = ["aes_gcm"]
production = ["models/production"]
secp256k1_zkp = []
sphincsplus = []
sprintf = []
universal_fw = []

# --------------------------------------------------------------------------
# Unit test configuration
# --------------------------------------------------------------------------

test = [
    "models/model_t3w1",
    "emulator",
]
