[package]
name = "trezor_lib_staticlib"
version = "0.1.0"
edition = "2021"

[lib]
name = "trezor_lib"
crate-type = ["staticlib"]

[features]
crypto = ["trezor_lib/crypto"]
layout_bolt = ["trezor_lib/layout_bolt"]
layout_caesar = ["trezor_lib/layout_caesar"]
layout_delizia = ["trezor_lib/layout_delizia"]
layout_eckhart = ["trezor_lib/layout_eckhart"]
micropython = ["trezor_lib/micropython"]
protobuf = ["trezor_lib/protobuf"]
ui = ["trezor_lib/ui"]
dma2d = ["trezor_lib/dma2d"]
framebuffer = ["trezor_lib/framebuffer"]
display_mono = ["trezor_lib/display_mono"]
display_rgb565 = ["trezor_lib/display_rgb565"]
display_rgba8888 = ["trezor_lib/display_rgba8888"]
ui_debug = ["trezor_lib/ui_debug"]
ui_performance_overlay = ["trezor_lib/ui_performance_overlay"]
ui_debug_overlay = ["trezor_lib/ui_debug_overlay"]
ui_antialiasing = ["trezor_lib/ui_antialiasing"]
ui_blurring = ["trezor_lib/ui_blurring"]
ui_image_buffer = ["trezor_lib/ui_image_buffer"]
ui_color_32bit = ["trezor_lib/ui_color_32bit"]
ui_overlay = ["trezor_lib/ui_overlay"]
ui_empty_lock = ["trezor_lib/ui_empty_lock"]
ui_jpeg = ["trezor_lib/ui_jpeg"]
ui_font_kerning = ["trezor_lib/ui_font_kerning"]
hw_jpeg_decoder = ["trezor_lib/hw_jpeg_decoder"]
boot_ucb = ["trezor_lib/boot_ucb"]
bootloader = ["trezor_lib/bootloader"]
prodtest = ["trezor_lib/prodtest"]
button = ["trezor_lib/button"]
touch = ["trezor_lib/touch"]
clippy = ["trezor_lib/clippy"]
debug = ["trezor_lib/debug"]
debuglink = ["trezor_lib/debuglink"]
dev_keys = ["trezor_lib/dev_keys"]
sbu = ["trezor_lib/sbu"]
haptic = ["trezor_lib/haptic"]
sd_card = ["trezor_lib/sd_card"]
rgb_led = ["trezor_lib/rgb_led"]
power_manager = ["trezor_lib/power_manager"]
pmic = ["trezor_lib/pmic"]
backlight = ["trezor_lib/backlight"]
usb = ["trezor_lib/usb"]
optiga = ["trezor_lib/optiga"]
ble = ["trezor_lib/ble"]
nrf = ["trezor_lib/nrf"]
smp = ["trezor_lib/smp"]
tropic = ["trezor_lib/tropic"]
serial_number = ["trezor_lib/serial_number"]
storage = ["trezor_lib/storage"]
telemetry = ["trezor_lib/telemetry"]
n4w1 = ["trezor_lib/n4w1"]
translations = ["trezor_lib/translations"]
secmon_layout = ["trezor_lib/secmon_layout"]
dbg_console = ["trezor_lib/dbg_console"]
app_loading = ["trezor_lib/app_loading"]
universal_fw = ["trezor_lib/universal_fw"]

[dependencies]
trezor_lib = { workspace = true, default-features = false }