[package]
name = "trezor_lib"
version = "0.1.0"
authors = ["SatoshiLabs <info@satoshilabs.com>"]
edition = "2021"
build = "build.rs"

[features]
default = ["layout_bolt"]
crypto = ["zeroize"]
layout_bolt = []
layout_caesar = []
layout_delizia = []
layout_eckhart = []
micropython = []
protobuf = ["micropython"]
ui = []
dma2d = []
framebuffer = []
display_mono = []
display_rgb565 = ["ui_antialiasing"]
display_rgba8888 = ["ui_antialiasing"]
ui_debug = []
ui_performance_overlay = []
ui_debug_overlay = []
ui_antialiasing = []
ui_blurring = []
ui_image_buffer = []
ui_color_32bit = []
ui_overlay = []
ui_empty_lock = []
ui_jpeg = []
ui_font_kerning = []
hw_jpeg_decoder = []
boot_ucb = []
bootloader = []
prodtest = []
button = []
touch = []
clippy = []
debug = ["ui_debug", "dev_keys"]
debuglink = []
dev_keys = []
sbu = []
haptic = []
sd_card = []
rgb_led = []
power_manager = []
pmic = []
backlight = []
usb = []
optiga = []
ble = []
nrf = []
smp = []
tropic = []
serial_number = []
storage = []
telemetry = []
n4w1 = []
translations = ["crypto"]
secmon_layout = []
dbg_console = []
app_loading = []
test = [
    "backlight",
    "button",
    "cc",
    "crypto",
    "dma2d",
    "debug",
    "glob",
    "micropython",
    "nrf",
    "optiga",
    "protobuf",
    "smp",
    "storage",
    "touch",
    "translations",
    "ui",
    "ui_jpeg",
    "ui_font_kerning",
    "ui_blurring",
    "ui_image_buffer",
    "ui_overlay",
    "ui_empty_lock",
    "universal_fw",
]
universal_fw = []
with_new_crates = ["dep:io", "dep:xbuild"]
with_upymod = ["dep:upymod"]

[lib]
crate-type = ["rlib"]
doctest = false

[dependencies]
cfg-if.workspace = true
cty.workspace = true
easer.workspace = true
heapless.workspace = true
log.workspace = true
minicbor.workspace = true
num-derive.workspace = true
num-traits.workspace = true
pareen.workspace = true
qrcodegen.workspace = true
spin.workspace = true
static-alloc.workspace = true
trezor-tjpgdec.workspace = true
ufmt.workspace = true
unsize.workspace = true
without-alloc.workspace = true
zeroize = { workspace = true, optional = true }

io = { workspace = true, optional = true }
upymod = { workspace = true, optional = true }

[build-dependencies]
bindgen.workspace = true
cc = { workspace = true, optional = true }
glob = { workspace = true, optional = true }
xbuild = { workspace = true, optional = true }

[dev-dependencies]
hex.workspace = true
serde_json.workspace = true
